Ensures long words will wrap in kudos message table cell in Chrome

--- a/style.less
+++ b/style.less
@@ -285,6 +285,11 @@ table {
 			border-bottom: 1px solid @border_main;
 		}
 
+		// Kudos plugin
+		td.kudos-message {
+			word-break: break-word;
+		}
+
 		h2 {
 			font-size: 1em;
 			letter-spacing: normal;
